Feat/iva 16/add tx review (#55)
This PR adds the ability for a reviewer of a presentation submission to submit their review (including issued credentials).
This allows holders/presenters to receive credentials at the end of a VC-API exchange.
Includes a refactoring of the VP submission verification into a separate service.
