# apps/vc-api/src/vc-api/exchanges/dtos/submission-review.dto.ts
@@ -15,17 +15,27 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-/**
- * The status of a presentation review
- * These statuses are NON-STANDARD
- *
- * Similar to {@link https://github.com/energywebfoundation/ssi-hub/blob/8b860e7cdae4e1b1aa75afeab8b9df7ab26befbb/src/modules/claim/claim.types.ts#L7}
- *
- * Maybe similar to Aries Issue-Credential protocol {@link https://github.com/hyperledger/aries-rfcs/blob/main/features/0453-issue-credential-v2/README.md}
- */
-export enum PresentationReviewStatus {
-  pendingSubmission = 'pending_submission',
-  pendingReview = 'pending_review',
+import { Type } from 'class-transformer';
+import { IsEnum, IsOptional, ValidateNested } from 'class-validator';
+import { VerifiablePresentationDto } from '../../credentials/dtos/verifiable-presentation.dto';
+
+export enum ReviewResult {
   approved = 'approved',
   rejected = 'rejected'
+}
+
+export class SubmissionReviewDto {
+  /**
+   * The judgement made by the reviewer
+   */
+  @IsEnum(ReviewResult)
+  result: ReviewResult;
+
+  /**
+   * A reviewer may want to include credentials (wrapped in a VP) to the holder
+   */
+  @ValidateNested()
+  @IsOptional()
+  @Type(() => VerifiablePresentationDto)
+  vp?: VerifiablePresentationDto;
 }
